[gd_scene load_steps=26 format=3 uid="uid://wbew8uvxi75k"]

[ext_resource type="Script" path="res://Scripts/boss/dead_morouze.gd" id="1_3kdab"]
[ext_resource type="Texture2D" uid="uid://2xtwemqg2f7u" path="res://Art/santa_sheets/idle_sheet.png" id="2_r8jaa"]
[ext_resource type="Texture2D" uid="uid://mdtfaw80a6wm" path="res://Art/santa_sheets/throw_sheet.png" id="3_464ta"]
[ext_resource type="Texture2D" uid="uid://dm7bmlan7jib2" path="res://Art/santa_sheets/run_sheet.png" id="4_xipu2"]

[sub_resource type="AtlasTexture" id="AtlasTexture_we3ij"]
atlas = ExtResource("2_r8jaa")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_vks0q"]
atlas = ExtResource("2_r8jaa")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_dii6r"]
atlas = ExtResource("2_r8jaa")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_yk1bl"]
atlas = ExtResource("2_r8jaa")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_mgcoc"]
atlas = ExtResource("2_r8jaa")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_5k6jv"]
atlas = ExtResource("2_r8jaa")
region = Rect2(160, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_5sokw"]
atlas = ExtResource("3_464ta")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_x3pl1"]
atlas = ExtResource("3_464ta")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_faibe"]
atlas = ExtResource("3_464ta")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_6l6od"]
atlas = ExtResource("3_464ta")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_uaayg"]
atlas = ExtResource("3_464ta")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_50xn3"]
atlas = ExtResource("3_464ta")
region = Rect2(160, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_vqtjs"]
atlas = ExtResource("4_xipu2")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_dhi31"]
atlas = ExtResource("4_xipu2")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_y4lok"]
atlas = ExtResource("4_xipu2")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_tkgsw"]
atlas = ExtResource("4_xipu2")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_jornh"]
atlas = ExtResource("4_xipu2")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_k0njy"]
atlas = ExtResource("4_xipu2")
region = Rect2(160, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_628fe"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_we3ij")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vks0q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dii6r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yk1bl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mgcoc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5k6jv")
}],
"loop": true,
"name": &"Idle",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_5sokw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x3pl1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_faibe")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6l6od")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uaayg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_50xn3")
}],
"loop": true,
"name": &"panch",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_vqtjs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dhi31")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y4lok")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tkgsw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jornh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k0njy")
}],
"loop": true,
"name": &"run",
"speed": 10.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ohmt6"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_urqv4"]
size = Vector2(24, 24)

[node name="DeadMorouze" type="CharacterBody2D"]
script = ExtResource("1_3kdab")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
texture_filter = 1
sprite_frames = SubResource("SpriteFrames_628fe")
animation = &"panch"
autoplay = "Idle"
frame_progress = 0.211893

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(1, 3)
shape = SubResource("RectangleShape2D_ohmt6")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Area2D"]
position = Vector2(1, 3)
shape = SubResource("RectangleShape2D_urqv4")

[node name="RunTimer" type="Timer" parent="."]
wait_time = 2.0

[node name="SpawnElfTimer" type="Timer" parent="."]
wait_time = 2.0

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="timeout" from="RunTimer" to="." method="_on_run_timer_timeout"]
[connection signal="timeout" from="SpawnElfTimer" to="." method="_on_spawn_elf_timer_timeout"]
